# Carte_GR_SW4STM32

./: .clang-format  .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  Carte_GR_SW4STM32.ioc  NUCLEO-F303RE.xml  README.md  STM32F303RETx_FLASH.ld  cmake_build_windows.txt  mx.scratch  stm32-toolchain.cmake
Debug_goldo/: makefile  sources.mk  (+1 more)
Drivers/STM32F3xx_HAL_Driver/: CMakeLists.txt
goldobot/: CMakeLists.txt
goldobot/include/goldo/: config.hpp  debug_goldo.h  debug_goldo.hpp  enums.hpp  goldobot_main.h  message_types.hpp  messages.hpp  robot.hpp  robot_simulator.hpp  sequence_engine.hpp
goldobot/include/goldo/comm/: comm_deserializer.hpp
goldobot/include/goldo/core/: circular_buffer.hpp  geometry.hpp  low_pass_filter.hpp  message_exchange.hpp  message_queue.hpp  pid_config.hpp  pid_controller.hpp  trapezoidal_speed_profile.hpp
goldobot/include/goldo/propulsion/: controller.hpp  controller_config.hpp  low_level_controller.hpp  odometry_config.hpp  simple_odometry.hpp  trajectory.hpp
goldobot/include/goldo/tasks/: arms.hpp  fpga.hpp  heartbeat.hpp  main.hpp  propulsion.hpp  rttelemetry.hpp  task.hpp  uart_comm.hpp
goldobot/include/goldobot/: comm_deserializer.hpp  comm_manager.hpp  comm_serializer.hpp  config.hpp  debug_types.hpp  enums.hpp  hal.hpp  lift_controller.hpp  message_types.hpp  messages.hpp  robot.hpp  robot_main.py  robot_simulator.hpp  sequence_engine.hpp  strategy_engine.hpp  strategy_engine_.hpp  trajectory_planner.hpp
goldobot/include/goldobot/actuators/: arm.hpp  arms.hpp  dynamixels_interface.hpp
goldobot/include/goldobot/core/: circular_buffer.hpp  geometry.hpp  message_exchange.hpp  message_queue.hpp  pid_config.hpp  pid_controller.hpp  trajectory_buffer.hpp  trapezoidal_speed_profile.hpp
goldobot/include/goldobot/odrive/: odrive.hpp  odrive_stream_parser.hpp  odrive_stream_writer.hpp  odrive_utils.hpp
goldobot/include/goldobot/propulsion/: command_queue.hpp  controller.hpp  controller_config.hpp  low_level_controller.hpp  odometry_config.hpp  simple_odometry.hpp
goldobot/include/goldobot/tasks/: arms.hpp  arms_config.hpp  debug.hpp  dynamixels_comm.hpp  fpga.hpp  gyro.hpp  heartbeat.hpp  log.hpp  main.hpp  odrive_comm.hpp  propulsion.hpp  rttelemetry.hpp  servos.hpp  task.hpp  task_ids.hpp  uart2_comm.hpp  uart_comm.hpp
goldobot/include/goldobot/utils/: crc.hpp  update_timestamp.hpp
goldobot/include/hal/generic/: hal.hpp
goldobot/robot_simulator/: CMakeLists.txt  hal.cpp  libsodium.lib  libsodiumd.lib  main.cpp  robot_emulator.cpp  robot_emulator.hpp  robot_simulator.yaml
goldobot/src/: comm_deserializer.cpp  comm_manager.cpp  comm_serializer.cpp  crc.cpp  goldobot_main.cpp  lift_controller.cpp  robot.cpp  robot_simulator.cpp  sequence_engine.cpp  trajectory_planner.cpp
goldobot/src/core/: derivative_filter.cpp  dynamixels_interface.cpp  message_exchange.cpp  message_queue.cpp  pid_controller.cpp  pid_filter.cpp  trapezoidal_speed_profile.cpp
goldobot/src/goldo/: goldobot_main.cpp  robot.cpp  robot_simulator.cpp  sequence_engine.cpp
goldobot/src/goldo/comm/: comm_deserializer.cpp  comm_serializer.cpp
goldobot/src/goldo/core/: low_pass_filter.cpp  message_exchange.cpp  message_queue.cpp  pid_controller.cpp  trapezoidal_speed_profile.cpp
goldobot/src/goldo/propulsion/: controller.cpp  low_level_controller.cpp  simple_odometry.cpp  trajectory.cpp
goldobot/src/goldo/tasks/: arms.cpp  fpga.cpp  heartbeat.cpp  main.cpp  propulsion.cpp  rttelemetry.cpp  task.cpp  uart_comm.cpp
goldobot/src/hal/nucleo_f303re_freertos_9_0/: hal.cpp
goldobot/src/odrive/: odrive.cpp  odrive_client.cpp  odrive_stream_parser.cpp  odrive_stream_writer.cpp
goldobot/src/propulsion/: controller.cpp  low_level_controller.cpp  simple_odometry.cpp  trajectory.cpp
goldobot/src/tasks/: arms.cpp  debug.cpp  dynamixels_comm.cpp  fpga.cpp  gyro.cpp  heartbeat.cpp  main.cpp  odrive_comm.cpp  propulsion.cpp  rttelemetry.cpp  servos.cpp  task.cpp  uart2_comm.cpp  uart_comm.cpp
libs/goldo_core/: CMakeLists.txt
libs/goldo_core/fuzzers/: CMakeLists.txt  fuzz_circular_buffer.cpp  fuzz_message_queue.cpp  gen_messages.hpp
libs/goldo_core/include/goldobot/: version.hpp
libs/goldo_core/include/goldobot/core/: circular_buffer.hpp  message_exchange.hpp  message_pool.hpp  message_queue.hpp
libs/goldo_core/include/goldobot/platform/: lockers.hpp
libs/goldo_core/src/: message_exchange.cpp  message_pool.cpp  message_queue.cpp  version.cpp  version.cpp.in
libs/goldo_core/tests/: CMakeLists.txt
libs/goldo_core/tests/utests/: test_circular_buffer.cpp  test_message_queue.cpp
libs/goldo_math/: CMakeLists.txt
libs/goldo_math/include/goldobot/core/: bezier_spline.hpp  derivative_filter.hpp  geometry.hpp  low_pass_filter.hpp  math_utils.hpp  pid_config.hpp  pid_controller.hpp  spline_trajectory.hpp  trajectory_buffer.hpp  trapezoidal_speed_profile.hpp
libs/goldo_math/src/: low_pass_filter.cpp  pid_controller.cpp  trajectory.cpp  trapezoidal_speed_profile.cpp
libs/goldo_math/tests/: CMakeLists.txt
libs/goldo_math/tests/samples/: sample_pid_controller.cpp  sample_spline_trajectory.cpp
libs/goldo_math/tests/utests/: gen_spline_test_data.py  test_derivative_filter.cpp
libs/goldo_odrive/: CMakeLists.txt
libs/goldo_odrive/include/goldobot/odrive/: odrive_client.hpp  odrive_stream_parser.hpp  odrive_stream_writer.hpp
libs/goldo_odrive/src/: odrive_client.cpp  odrive_stream_writer.cpp
libs/goldo_propulsion/: CMakeLists.txt
libs/goldo_propulsion/include/goldobot/propulsion/: blocking_detection.hpp  blocking_detector.hpp  command_queue.hpp  controller.hpp  controller_config.hpp  low_level_controller.hpp  odometry_config.hpp  propulsion_task_base.hpp  simple_odometry.hpp  speed_controller.hpp
libs/goldo_propulsion/src/: blocking_detector.cpp  controller.cpp  low_level_controller.cpp  robot_simulator.cpp  simple_odometry.cpp  speed_controller.cpp
libs/goldo_propulsion/tests/: CMakeLists.txt
libs/goldo_propulsion/tests/samples/: sample_blocking_detection.cpp  sample_propulsion_controller.cpp  sample_speed_controller.cpp
(+60 files in other folders)
